--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,18 @@
     <string name="dropbox_logout">Logout</string>
     <string name="transaction_listener_msg">A new transaction has been detected. Do you want to record it?</string>
     <string name="notifi_title">Accounting</string>
-    <string name="notifi_small_content">A new transaction has been detected.</string>
+    <string name="notifi_small_content">New transaction has been detected.</string>
     <string name="notifi_large_content_prefix">The transaction worths $</string>
     <string name="notifi_large_content_suffix">\nPress ADD to record it or swipe to cancel</string>
     <string name="notifi_destroy_content">The app has stopped listening to transaction reports.</string>
     <string name="status_complete">Complete</string>
     <string name="status_updating">Updating</string>
     <string name="status_initial">None</string>
+    <string name="transaction_type_private">Private</string>
+    <string name="transaction_type_shared">Shared</string>
+    <string name="transaction_type_unrelated">Unrelated</string>
+    <string name="new_provider_file_headline">#this is a simple list of new providers. Do not delete this line</string>
+
+    <string name="fragment_pending_transaction_menu_no_entry">No Pending Transactions</string>
 
 </resources>
